--- a/man/man5/swap.conf.5
+++ b/man/man5/swap.conf.5
@@ -23,7 +23,7 @@ To disable a configuration file supplied by the vendor, the recommended way is t
 For a complete description of the configuration loading rules, see the 'CONFIGURATION DIRECTORIES AND PRECEDENCE' section of system.conf.d(5).
 
 .SH OPTIONS
-All options are configured in the [Main], [Swapfile], or [ZramWriteback] sections.
+All options are configured in the [Main], [File], or [ZramWriteback] sections.
 
 .SS "[Main] Section Options"
 
@@ -38,35 +38,35 @@ Controls which swap mechanism to use. One of "auto", "swapfile", "zram", "zram+f
 .IP \(bu 2
 \fBzram\fR: A compressed RAM-based swap device is created. No swap file is used.
 .IP \(bu 2
-\fBzram+file\fR: A compressed RAM-based swap device is created, with the swap file specified in \fBSwapfile::Path\fR as a backing store.
+\fBzram+file\fR: A compressed RAM-based swap device is created, with the file specified in \fBFile::Path\fR as a backing store.
 .IP \(bu 2
 \fBnone\fR: No swap is configured. Any existing swap file will be removed to free up disk space.
 .RE
 .IP
 Defaults to "\fBauto\fR".
 
-.SS "[Swapfile] Section Options"
-These options are disregarded for mechanisms that don't involve a file (e.g. "zram"), and any existing swap file will be removed to free up disk space.
+.SS "[File] Section Options"
+These options configure the file used by both the "swapfile" and "zram+file" mechanisms. For "swapfile", the file serves as the primary swap device. For "zram+file", it serves as a backing store for the compressed RAM-based swap device via a loop device. These options are disregarded for mechanisms that don't involve a file (e.g. "zram"), and any existing file will be removed to free up disk space.
 
 .TP
 \fBPath=\fR
 The path to the swap file. This is used directly by the "swapfile" mechanism, and as a backing store via a loop device for the "zram+file" mechanism. Defaults to "\fB/var/swap\fR".
 
 .TP
-\fBSwapFactor=\fR
-Target swap size as a factor of system memory. For example, a value of "1" means a swap size equal to the total system RAM. The final swap size is constrained by \fBMaxSwap\fR and \fBMaxDiskPct\fR.
+\fBRamMultiplier=\fR
+Target file size as a multiple of system RAM. For example, a value of "1" means a file size equal to the total system RAM, while "2" creates a file twice the size of RAM. The final swap size is constrained by \fBMaxSizeMiB\fR and \fBMaxDiskPercent\fR.
 
 .TP
-\fBMaxSwap=\fR
-The maximum swap size in MiB. This limits the swap size irrespective of the \fBSwapFactor\fR. Set to an empty string to disable this limit. Defaults to "\fB2048\fR".
+\fBMaxSizeMiB=\fR
+The maximum file size in MiB (mebibytes). This limits the file size irrespective of the \fBRamMultiplier\fR setting. Set to an empty string to disable this limit. Defaults to "\fB2048\fR".
 
 .TP
-\fBMaxDiskPct=\fR
-The maximum percentage of available disk space to use for the swap file, to prevent it from consuming too much storage. Defaults to "\fB50\fR".
+\fBMaxDiskPercent=\fR
+The maximum percentage of available disk space to use for the file, to prevent it from consuming too much storage. Defaults to "\fB50\fR".
 
 .TP
-\fBSwapSize=\fR
-An explicit swap size in MiB. If set, this value overrides the \fBSwapFactor\fR calculation and is used directly.
+\fBFixedSizeMiB=\fR
+A fixed file size in MiB (mebibytes). If set, this value overrides the \fBRamMultiplier\fR calculation and is used directly to set the exact file size.
 
 .SS "[ZramWriteback] Section Options"
 These options control the writeback behaviour for the "zram+file" mechanism. Writeback allows zram to move less frequently accessed pages to the backing swap file, improving memory efficiency. These options are ignored for other mechanisms.
