--- a/man/man5/swap.conf.5
+++ b/man/man5/swap.conf.5
@@ -23,7 +23,7 @@ To disable a configuration file supplied by the vendor, the recommended way is t
 For a complete description of the configuration loading rules, see the 'CONFIGURATION DIRECTORIES AND PRECEDENCE' section of system.conf.d(5).
 
 .SH OPTIONS
-All options are configured in the [Main], [File], or [ZramWriteback] sections.
+All options are configured in the [Main], [File], or [Zram] sections.
 
 .SS "[Main] Section Options"
 
@@ -68,11 +68,13 @@ The maximum percentage of available disk space to use for the file, to prevent i
 \fBFixedSizeMiB=\fR
 A fixed file size in MiB (mebibytes). If set, this value overrides the \fBRamMultiplier\fR calculation and is used directly to set the exact file size.
 
-.SS "[ZramWriteback] Section Options"
-These options control the writeback behaviour for the "zram+file" mechanism. Writeback allows zram to move less frequently accessed pages to the backing swap file, improving memory efficiency. These options are ignored for other mechanisms.
+.SS "[Zram] Section Options"
+These options configure the zram (compressed RAM) swap device used by both the "zram" and "zram+file" mechanisms.
+
+The following options control writeback behaviour for the "zram+file" mechanism. Writeback allows zram to move less frequently accessed pages to the backing file, improving memory efficiency. These writeback options are ignored for other mechanisms.
 
 .TP
-\fBTrigger=\fR
+\fBWritebackTrigger=\fR
 Controls how zram writeback is triggered. One of "auto", "manual", and "timer".
 .RS
 .IP \(bu 2
@@ -86,11 +88,11 @@ Controls how zram writeback is triggered. One of "auto", "manual", and "timer".
 Defaults to "\fBauto\fR".
 
 .TP
-\fBInitialDelay=\fR
+\fBWritebackInitialDelay=\fR
 The time to wait after system boot before performing the first writeback operation when using the "timer" trigger. This allows the system to settle and identifies pages that are genuinely less frequently accessed. Takes a time span value. See \fBsystemd.time\fR(7) for details on the syntax. This setting is ignored for other triggers. Defaults to "\fB180min\fR".
 
 .TP
-\fBPeriodicInterval=\fR
+\fBWritebackPeriodicInterval=\fR
 The interval between subsequent writeback operations when using the "timer" trigger. This determines how frequently zram will write back less active pages to the backing swap file. Takes a time span value. See \fBsystemd.time\fR(7) for details on the syntax. This setting is ignored for other triggers. Defaults to "\fB24h\fR".
 
 .SH MONITORING WRITEBACK TIMERS
