--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+rpi-swap (1.1.0) trixie; urgency=medium
+
+  * Rename [RpiSwap] to [Main]
+  * Rename [SwapFile] variables under [File]
+  * Move '[ZramWriteback]' config to '[Zram]'
+  * Allow [Zram] size to be specified
+  * Allow fractional RamMultiplier
+  * rpi-setup-loop: Wait for symlink to be created
+  * Ensure backingfile exists before zram setup
+
+ -- Richard Oliver <richard.oliver@raspberrypi.com>  Wed, 06 Aug 2025 17:00:38 +0100
+
 rpi-swap (1.0.0) trixie; urgency=medium
 
   [ richard.oliver@raspberrypi.com ]
