--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+rpi-swap (1.1.1) trixie; urgency=medium
+
+  * rpi-swap: Depends on rpi-systemd-config
+  * debian: Standards-Version: 4.7.2
+  * rpi-setup-loop: Fixup man character escape
+
+ -- Richard Oliver <richard.oliver@raspberrypi.com>  Thu, 07 Aug 2025 13:35:08 +0100
+
 rpi-swap (1.1.0) trixie; urgency=medium
 
   * Rename [RpiSwap] to [Main]
