--- a/man/man5/swap.conf.5
+++ b/man/man5/swap.conf.5
@@ -40,9 +40,9 @@ Controls which swap mechanism to use. One of "auto", "swapfile", "swapdev", "zra
 .IP \(bu 2
 \fBzram\fR: A compressed RAM-based swap device is created. No swap file is used.
 .IP \(bu 2
-\fBzram+file\fR: A compressed RAM-based swap device is created, with the file specified in \fBFile::Path\fR used for writeback storage. The file is not used as a traditional swap device; instead, zram occasionally writes idle pages to it to free up RAM, reducing SD card wear through infrequent writes.
+\fBzram+file\fR: A compressed RAM-based swap device is created, with the file specified in \fBFile::Path\fR used for writeback storage. The file is not used as a traditional swap device; instead, zram occasionally writes idle pages to it to free up RAM, reducing SD card wear through infrequent writes. Only the zram device will appear in \fBswapon -s\fR output; the backing file is not activated as swap.
 .IP \(bu 2
-\fBzram+device\fR: A compressed RAM-based swap device is created, with the block device specified in \fBFile::Path\fR used directly for writeback storage. No loop device or file is created; the device must already exist. Provisioning the swap partition is a manual step and is not performed by rpi-swap.
+\fBzram+device\fR: A compressed RAM-based swap device is created, with the block device specified in \fBFile::Path\fR used directly for writeback storage. No loop device or file is created; the device must already exist. Provisioning the swap partition is a manual step and is not performed by rpi-swap. Only the zram device will appear in \fBswapon -s\fR output; the backing device serves as writeback storage, not active swap.
 .IP \(bu 2
 \fBnone\fR: No swap is configured. Any existing swap file will be removed to free up disk space.
 .RE
@@ -73,9 +73,11 @@ The maximum percentage of available disk space to use for the file, to prevent i
 A fixed file size in MiB (mebibytes). If set, this value overrides the \fBRamMultiplier\fR calculation and is used directly to set the exact file size.
 
 .SS "[Zram] Section Options"
-These options configure the zram (compressed RAM) swap device used by both the "zram" and "zram+file" mechanisms.
+These options configure the zram (compressed RAM) swap device used by the "zram", "zram+file", and "zram+device" mechanisms.
 
 When zram mechanisms are enabled, the system automatically optimises kernel parameters for compressed swap performance. This includes setting vm.page-cluster=0 to disable readahead, which reduces latency with minimal throughput impact on compressed RAM swap devices.
+
+\fBNote:\fR With zram-based mechanisms, only the zram device (e.g., /dev/zram0) appears as active swap in \fBswapon -s\fR output. For "zram+file" and "zram+device" mechanisms, the backing file or device is used exclusively for writeback and will not appear as a separate swap device.
 
 .TP
 \fBRamMultiplier=\fR
@@ -90,6 +92,8 @@ The maximum zram decompressed capacity in MiB (mebibytes). This limits the zram 
 A fixed zram decompressed capacity in MiB (mebibytes). If set, this value overrides the \fBRamMultiplier\fR calculation and is used directly to set the exact zram virtual capacity.
 
 The following options control writeback behaviour for the "zram+file" and "zram+device" mechanisms. Writeback allows zram to move idle pages to the writeback file or device, freeing up RAM while reducing flash wear through infrequent writes. These writeback options are ignored for other mechanisms.
+
+\fBImportant:\fR The backing file or device is not activated as traditional swap and will not appear in \fBswapon -s\fR. To verify writeback is configured, check \fB/sys/block/zram0/backing_dev\fR, which should display the path to your writeback file or device.
 
 .TP
 \fBWritebackTrigger=\fR
@@ -207,6 +211,8 @@ EOF
 .fi
 
 This configures a compressed zram swap device with writeback going directly to the specified block device. No file is created or resized. Ensure the device exists at boot and is safe to overwrite with swap data.
+
+\fBNote:\fR Only /dev/zram0 will appear in \fBswapon -s\fR output. The backing device serves as writeback storage for idle pages and is not activated as traditional swap. To verify the configuration, run: \fBcat /sys/block/zram0/backing_dev\fR
 
 .B After creating this configuration file, reboot the system for the changes to take effect.
 
